handling 'save' in repository